# ucx

./: .gitignore  Makefile.am  autogen.sh  configure.ac
config/m4/: compiler.m4  mpi.m4  ucb.m4  ucf.m4  ucg.m4  ucm.m4
contrib/: configure-devel  read_instrumentation.py  test_ucg.sh
contrib/schedulers/common/: build.sh  coll.py  common.py  common.sh  osu.py  p2p.py  perftest.py
docs/doxygen/: ucxdox
examples/: Makefile.am  ucg_hello_world.c  ucg_publisher_subscriber.c
src/tools/info/: Makefile.am  group_info.c  proto_info.c  tl_info.c  type_info.c  ucx_info.c  ucx_info.h
src/tools/profile/: read_profile.c
src/ucb/: Makefile.am  configure.m4
src/ucb/api/: ucb.h  ucb_def.h  ucb_version.h.in
src/ucb/base/: Makefile.am  configure.m4  ucb.c  ucb_context.c  ucb_context.h  ucb_pipes.c  ucb_pipes.h  ucb_version.c  ucb_version.c.in
src/ucb/builtin/: Makefile.am  builtin.c  configure.m4
src/ucb/coredirect/: Makefile.am  configure.m4  coredirect.c
src/ucf/: Makefile.am  configure.m4
src/ucf/api/: ucf.h  ucf_def.h  ucf_posix.h  ucf_version.h.in
src/ucf/base/: Makefile.am  configure.m4  ucf.c  ucf_context.c  ucf_context.h  ucf_file.c  ucf_file.h
src/ucf/builtin/: Makefile.am  builtin.c  configure.m4
src/ucf/over_ucg/: Makefile.am  configure.m4  over_ucg.c  over_ucg.h
src/ucg/: Makefile.am  configure.m4
src/ucg/api/: ucg.h  ucg_def.h  ucg_minimal.h  ucg_mpi.h  ucg_plan_component.h  ucg_pubsub.h
src/ucg/base/: Makefile.am  ucg_context.c  ucg_context.h  ucg_ft.c  ucg_ft.h  ucg_group.c  ucg_group.h  ucg_listener.c  ucg_plan.c  ucg_plan.h  ucg_topo.c
src/ucg/over_ucb/: Makefile.am  over_ucb.c  over_ucb.h  over_ucb_plan.c
src/ucg/over_ucp/: Makefile.am  over_ucp.c  over_ucp.h  over_ucp_comp.inl  over_ucp_execute.c  over_ucp_phase.c  over_ucp_plan.c  over_ucp_print.c  over_ucp_reduce.c
src/ucg/over_uct/: Makefile.am  over_uct.c  over_uct.h  over_uct_comp.inl  over_uct_execute.c  over_uct_optimize.c  over_uct_pack.c  over_uct_phase.c  over_uct_plan.c  over_uct_print.c
src/ucm/: Makefile.am
src/ucm/malloc/: allocator.h  malloc_hook.c
src/ucm/ptmalloc286/: malloc.c
src/ucm/tcmalloc/: malloc.c  malloc.h
src/ucp/: Makefile.am
src/ucp/api/: ucp.h  ucp_def.h
src/ucp/core/: ucp_am.c  ucp_context.c  ucp_context.h  ucp_ep.c  ucp_ep.h  ucp_ep.inl  ucp_proxy_ep.h  ucp_request.c  ucp_request.h  ucp_request.inl  ucp_types.h  ucp_worker.c  ucp_worker.h  ucp_worker.inl
src/ucp/dt/: datatype_iter.c  datatype_iter.h  datatype_iter.inl  dt.c  dt.h  dt.inl  dt_contig.h  dt_generic.c  dt_strided.c  dt_strided.h
src/ucp/pagg/: pagg.c  pagg.h
src/ucp/proto/: lane_type.c  lane_type.h  proto_am.inl  proto_common.c
src/ucp/rma/: amo_send.c  basic_rma.c  rma.h  rma_send.c
src/ucp/rndv/: proto_rndv.c
src/ucp/stream/: stream_recv.c
src/ucp/tag/: tag_match.c  tag_match.inl  tag_recv.c  tag_send.c
src/ucp/wireup/: address.c  address.h  select.c  wireup.c  wireup.h  wireup_cm.c
src/ucs/: Makefile.am
src/ucs/arch/: cpu.h
src/ucs/arch/aarch64/: cpu.h
src/ucs/arch/generic/: cpu.h
src/ucs/arch/ppc64/: cpu.h
src/ucs/arch/rv64/: cpu.h
src/ucs/arch/x86_64/: cpu.c  cpu.h
src/ucs/async/: async.c  async_int.h  signal.c  thread.c
src/ucs/config/: global_opts.c  parser.h
src/ucs/counters/: ethtool_ctrs.c  ethtool_ctrs.h
src/ucs/datastruct/: int_array.h  ptr_array.c  ptr_array.h
src/ucs/debug/: debug.c  debug.h  instrument.c  instrument.h  memtrack.c  memtrack.h  memtrack_int.h
src/ucs/pmodule/: cache.c  cache.h  component.c  component.h  framework.c  framework.h  object.c  object.h  target.c  target.h
src/ucs/stats/: libstats.h  stats.c  stats.h
src/ucs/sys/: compiler.h  compiler_def.h  init.c  preprocessor.h  sock.c  sock.h  sys.c  sys.h
src/ucs/time/: timerq.c
src/ucs/type/: spinlock.h
src/uct/: Makefile.am  configure.m4
src/uct/api/: tl.h  uct.h  uct_def.h
src/uct/api/v2/: uct_v2.h
src/uct/base/: uct_component.c  uct_iface.c  uct_iface.h  uct_md.c
src/uct/cuda/cuda_copy/: cuda_copy_iface.c
src/uct/cuda/gdr_copy/: gdr_copy_iface.c
src/uct/ib/: Makefile.am  configure.m4
src/uct/ib/base/: ib_device.c  ib_device.h  ib_iface.c  ib_log.h  ib_md.c  ib_md.h  ib_verbs.h
src/uct/ib/dc/: dc_mlx5.c  dc_mlx5_ep.c
src/uct/ib/mlx5/: ib_mlx5.c  ib_mlx5.h
src/uct/ib/rc/accel/: rc_mlx5_common.c  rc_mlx5_ep.c  rc_mlx5_iface.c
src/uct/ib/rc/verbs/: rc_verbs.h  rc_verbs_ep.c  rc_verbs_iface.c  rc_verbs_impl.h
src/uct/ib/rdmacm/: rdmacm_cm.c  rdmacm_cm_ep.c  rdmacm_cm_ep.h
src/uct/ib/ud/accel/: ud_mlx5.c  ud_mlx5.h
src/uct/ib/ud/base/: ud_ep.c  ud_iface.c  ud_iface.h  ud_inl.h  ud_mcast.c  ud_mcast.h
src/uct/ib/ud/verbs/: ud_verbs.c  ud_verbs.h
src/uct/sm/mm/base/: mm_ep.c  mm_ep.h  mm_iface.c  mm_iface.h  mm_md.h
src/uct/sm/mm/coll/: mm_coll_bcast.c  mm_coll_ep.c  mm_coll_ep.h  mm_coll_iface.c  mm_coll_iface.h  mm_coll_incast.c
src/uct/sm/mm/posix/: mm_posix.c
src/uct/sm/mm/sysv/: mm_sysv.c
src/uct/sm/mm/xpmem/: mm_xpmem.c
src/uct/sm/self/: self.c
src/uct/tcp/: tcp_ep.c  tcp_iface.c
test/apps/iodemo/: Makefile.am
test/gtest/: Makefile.am
test/gtest/common/: mem_buffer.cc  mem_buffer.h  test.h
test/gtest/ucg/: test_ucg_coll.cc  test_ucg_context.cc  test_ucg_group.cc  test_ucg_topo.cc  ucg_test.cc  ucg_test.h
test/gtest/ucp/: test_ucp_atomic.cc  test_ucp_context.cc  test_ucp_memheap.cc  test_ucp_memheap.h  test_ucp_rma.cc  test_ucp_wireup.cc  ucp_test.cc  ucp_test.h
test/gtest/ucs/: test_datatype.cc  test_debug.cc  test_instr.cc  test_memtrack.cc  test_stats.cc
test/mpi/: Makefile.am
