#
# Copyright (c) Huawei Technologies Co., Ltd. 2019.  ALL RIGHTS RESERVED.
# See file LICENSE for terms.
#

noinst_LTLIBRARIES      = libucb_base.la
libucb_base_la_CFLAGS   = $(BASE_CFLAGS)
libucb_base_la_CPPFLAGS = $(BASE_CPPFLAGS)

noinst_HEADERS = \
	ucb_context.h \
	ucb_pipes.h

libucb_base_la_SOURCES = \
	ucb_context.c \
	ucb_pipes.c \
	ucb_version.c
