#
# Copyright (c) Huawei Technologies Co., Ltd. 2021.  ALL RIGHTS RESERVED.
# See file LICENSE for terms.
#

if HAVE_CD

noinst_LTLIBRARIES            = libucb_coredirect.la
libucb_coredirect_la_CFLAGS   = $(BASE_CFLAGS)
libucb_coredirect_la_CPPFLAGS = $(BASE_CPPFLAGS)
libucb_coredirect_la_SOURCES  = coredirect.c

endif
