#
# Copyright (c) Huawei Technologies Co., Ltd. 2019.  ALL RIGHTS RESERVED.
# See file LICENSE for terms.
#

noinst_LTLIBRARIES      = libucf_base.la
libucf_base_la_CFLAGS   = $(BASE_CFLAGS)
libucf_base_la_CPPFLAGS = $(BASE_CPPFLAGS)

noinst_HEADERS = \
	ucf_context.h \
	ucf_file.h

libucf_base_la_SOURCES = \
	ucf_context.c \
	ucf_file.c \
	ucf_version.c
