#
# Copyright (c) Huawei Technologies Co., Ltd. 2021.  ALL RIGHTS RESERVED.
# See file LICENSE for terms.
#

if HAVE_UCG

noinst_LTLIBRARIES          = libucf_over_ucg.la
libucf_over_ucg_la_CFLAGS   = $(BASE_CFLAGS)
libucf_over_ucg_la_CPPFLAGS = $(BASE_CPPFLAGS)
libucf_over_ucg_la_SOURCES  = over_ucg.c

endif # HAVE_UCG