#
# Copyright (c) Huawei Technologies Co., Ltd. 2019.  ALL RIGHTS RESERVED.
# See file LICENSE for terms.
#

noinst_LTLIBRARIES          = libucf_over_ucg.la
libucf_over_ucg_la_CFLAGS   = $(BASE_CFLAGS)
libucf_over_ucg_la_CPPFLAGS = $(BASE_CPPFLAGS)

noinst_HEADERS = over_ucg.h

libucf_over_ucg_la_SOURCES = over_ucg.c
