#
# Copyright (c) Huawei Technologies Co., Ltd. 2019.  ALL RIGHTS RESERVED.
# See file LICENSE for terms.
#

noinst_LTLIBRARIES          = libucg_over_ucp.la
libucg_over_ucp_la_CFLAGS   = $(BASE_CFLAGS)
libucg_over_ucp_la_CPPFLAGS = $(BASE_CPPFLAGS)

noinst_HEADERS = \
	over_ucp.h \
	over_ucp_comp.inl

libucg_over_ucp_la_SOURCES = \
	over_ucp.c \
	over_ucp_execute.c \
	over_ucp_phase.c \
	over_ucp_plan.c \
	over_ucp_print.c \
	over_ucp_reduce.c
